Fix compilation for COMPILER(MSVC) && !CPU(X86) after r156490. https://bugs.webkit.org/show_bug.cgi?id=122102

Reviewed by Geoffrey Garen.

_AddressOfReturnAddress() is supported for all platforms of
ths Microsoft compiler, so we can use it for !CPU(X86) too.

* jit/JITOperationWrappers.h:


Canonical link: https://commits.webkit.org/140151@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@156654 268f45cc-cd09-0410-ab3c-d52691b4dbfc